<resources>
    <string name="app_name">POROS Grading</string>
    <string name="app_icon">App Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="login_dengan_email">Login dengan Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nim">NIM</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="anggota">Anggota</string>
    <string name="admin">Admin</string>
    <string name="kategori_kegiatan">Kategori Kegiatan</string>
    <string-array name="activity_type">
        <item>Rapat</item>
        <item>Materi</item>
        <item>Workshop</item>
    </string-array>
    <string name="preference_file_key">POROS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="here_is_your_certificate">Here is your Certificate!</string>
    <string name="edit">Edit</string>
    <string name="pilih_divisi">Pilih Divisi</string>
    <string name="kumpulkan_poin_anda_untuk_mendapatkan_sertifikat">Kumpulkan poin anda untuk mendapatkan sertifikat</string>
    <string name="get_certificate">Get Certificate</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="nama_kegiatan">Nama Kegiatan</string>
    <string name="jenis_kegiatan">Jenis Kegiatan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="jumlah_point">Jumlah Point</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="divisi">Divisi</string>
    <string name="nonaktifkan_akun">Nonaktifkan Akun</string>
    <string name="logout">Logout</string>
    <string name="divisi_icon">divisi icon</string>
    <string name="belum_diapprove">Belum diapprove</string>
    <string name="avatar">avatar</string>
    <string name="decline">decline</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="accept">accept</string>
    <string name="lihat">Lihat</string>
    <string name="take_certificate_label">Selamat score yang anda telah kumpulkan telah mencapai target!, Anda bisa mengambil sertifikat!</string>
</resources>
